force-app/main/default/objects/BL_Rate_Code_Master__c/BL_Rate_Code_Master__c.object-meta.xml
<CustomObject>
    <label>Rate Code Master</label>
    <nameField>
        <displayFormat>RC-{00000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rate Code Masters</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>