force-app/main/default/objects/BL_Rate_Code_Master__c/fields/BL_Description__c.field-meta.xml
<CustomField>
    <fullName>BL_Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>