force-app/main/default/objects/BL_Rate_Code_Master__c/fields/BL_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>BL_Effective_Date__c</fullName>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>