force-app/main/default/objects/BL_Rate_Code_Master__c/fields/BL_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>BL_Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>