force-app/main/default/objects/BL_Rate_Code_Master__c/fields/BL_Product_Master__c.field-meta.xml
<CustomField>
    <fullName>BL_Product_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Master</label>
    <referenceTo>Product_Master__c</referenceTo>
    <relationshipLabel>Rate Code Masters</relationshipLabel>
    <relationshipName>BL_Rate_Code_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>