force-app/main/default/objects/BL_Rate_Code_Master__c/fields/BL_Rate_Code__c.field-meta.xml
<CustomField>
    <fullName>BL_Rate_Code__c</fullName>
    <label>Rate Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>