force-app/main/default/objects/BL_Rate_Code_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BL_Rate_Code__c</columns>
    <columns>BL_Effective_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>